# cnctd_cli

./: Cargo.toml
src/: main.rs
src/config/: cargo_toml_config.rs  device_config.rs  git_config.rs  mod.rs  shortcut.rs
src/manager/: mod.rs
src/project/: mod.rs
src/routes/: mod.rs
src/routes/commands/: config.rs  mod.rs
src/scaffold/: mod.rs
src/scaffold/apps/: android.rs  cli.rs  desktop.rs  ios.rs  mod.rs  server.rs  web.rs
src/scaffold/module/: go.rs  mod.rs  rust.rs
src/scaffold/project/: mod.rs
src/scaffold/scripts/: mod.rs
src/scaffold/templates/rust/: server.rs
src/scripts/: local_dependencies.rs  mod.rs
