[package]
name = "cnctd_cli"
version = "0.1.7"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "CLI for scaffolding and managing projects"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_cli"

[[bin]]
name = "cnctd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
cnctd = { version = "0.1.3", path = "../../../modules/rust/cnctd" }
colored = "2.0.4"
crossterm = "0.27.0"
dotenv = "0.15.0"
figlet-rs = "0.1.5"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
walkdir = "2.4.0"
